# branchmind

./: .apply_task_projects.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOALS.md  LEGEND.md  MAP.md  Makefile  PHILOSOPHY.md  README.md  REPO_RULES.md
apps/viewer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/mcp/: Cargo.toml  build.rs
crates/mcp/src/: main.rs  server.rs
crates/mcp/tests/: acceptance_flagship_ux_shared_daily.rs  ai_first_dx_regressions.rs  anchors.rs  anti_drift_guards.rs  auto_agent_id.rs  auto_budget.rs  branchmind_core.rs  branchmind_graph.rs  branchmind_think_trace.rs  content_length_smoke.rs  daemon_socket_smoke.rs  delegation_jobs.rs  dogfood_jobs_proof_gate.rs  dogfood_multirunner_glance.rs  dx_dod.rs  feature_flags.rs  flagship_eval.rs  jobs_ai_first_ux.rs  jobs_cancel_wait.rs  jobs_mesh_v1.rs  jobs_proof_attach.rs  jobs_radar_last_event_progress.rs  jobs_wait_watch.rs  knowledge_cards.rs  knowledge_invalid_key_suggest.rs  knowledge_key_suggest_v1.rs  knowledge_lint_v1.rs  knowledge_query_v1.rs  knowledge_recall_v1.rs  mcp_contract.rs  mcp_protocol.rs  meaning_map_hud.rs  multi_agent_lanes.rs  next_engine_no_placeholders.rs  no_legacy_names.rs  open_anchor.rs  open_budget_invariants.rs  open_card_include_content.rs  open_compact.rs  open_doc_entry_compact_budget.rs  (+55 more)
crates/mcp/tests_legacy_v1/: auto_agent_id.rs  branchmind_core.rs  cli_help_version.rs  dogfood_jobs_proof_gate.rs  dogfood_multirunner_glance.rs  dx_dod.rs  jobs_ai_first_ux.rs  jobs_proof_attach.rs  jobs_radar_last_event_progress.rs  open_target.rs  open_trace_doc_entry.rs  pipeline_v2_integration.rs  portal_view_alias.rs  reasoning_engine.rs  recovery_ux.rs  relevance_views.rs  runner_defaults_smoke.rs  runner_inbox_status.rs  (+12 more)
(+996 files in other folders)
