[package]
name = "bm_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
bm_core = { path = "../core" }
bm_storage = { path = "../storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

[target.'cfg(unix)'.dependencies]
# Unix-only: used to poll stdin with a timeout so hot reload can trigger even when the MCP client
# is idle (no manual restarts required).
nix = { version = "0.28", default-features = false, features = ["poll", "signal"] }
