[package]
name = "bm_viewer_tauri"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

bm_core = { path = "../../../crates/core" }
bm_storage = { path = "../../../crates/storage" }

[workspace]

